--- a/src/components/themeToggle/themeToggle.module.css
+++ b/src/components/themeToggle/themeToggle.module.css
@@ -1,12 +1,13 @@
-.container{
+.container {
     width: 40px;
     height: 20px;
     border-radius: 50px;
     cursor: pointer;
     display: flex;
-    align-items:center;
+    align-items: center;
     background-color: black;
     position: relative;
+    justify-content: space-between;
 }
 
 .ball {
@@ -15,5 +16,4 @@
     border-radius: 50%;
     background-color: white;
     position: absolute;
-    left: 1px;
 }
