Blog Category Page

--- a/src/components/themeToggle/themeToggle.module.css
+++ b/src/components/themeToggle/themeToggle.module.css
@@ -1,4 +1,4 @@
-.container {
+ .container {
     width: 40px;
     height: 20px;
     border-radius: 50px;
@@ -16,4 +16,5 @@
     border-radius: 50%;
     background-color: white;
     position: absolute;
+    left: 1px;
 }
