--- a/src/components/authLinks/authLinks.module.css
+++ b/src/components/authLinks/authLinks.module.css
@@ -1,43 +1,45 @@
 .link {
-    cursor:pointor;
+    cursor: pointer;
 }
 
-.burger{
+.burger {
     width: 20px;
     height: 16px;
     flex-direction: column;
     justify-content: space-between;
-    cursor:pointer;
+    cursor: pointer;
     display: none;
 }
 
-.none{
-    width: 100px;
-    height:2%;
-    background-color:var(--textColor);
+.line {
+    width: 100%;
+    height: 2%;
+    background-color: var(--textColor);
 }
 
-.responsiveMenu{
+.responsiveMenu {
     position: absolute;
     top: 100px;
     left: 0;
     background-color: var(--bg);
     height: calc(100% - 100px);
-    width:100%;
-    display:flex;
+    width: 100%;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 500px;
-    
+    gap: 50px;
+    font-size: 36px;
+    z-index: 999;
 }
 
-@media screen and (max-width: 640px){
+@media screen and (max-width: 640px) {
     .burger {
         display: flex;
     }
-
-    .link{
-        display:none;
+    
+    .link {
+        display: none;
     }
+    
 }
