--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -12,60 +12,51 @@
 }
 
 .logo {
-    flex:1;
+    flex: 1;
     text-align: center;
-    font-size:36px;
-    font-weight:bold;
+    font-size: 36px;
+    font-weight: bold;
 }
 
-.links{
+.links {
     display: flex;
     gap: 20px;
     flex: 1;
     font-size: 20px;
+    align-items: center;
 }
 
 @media screen and (max-width: 1280px) {
-    .logo{
-        font-size:32px;
-    }
+    .logo {
+        font-size: 32px
+    } 
     .links {
-        font-size:18px;
-        gap: 15px;
+        font-size: 18px;
+        gap: 15px
     }
 }
 
 @media screen and (max-width: 1024px) {
-    .social{
+    .social {
         display: none;
     }
+
     .logo {
         text-align: left;
     }
 }
 
-@media screen and (max-width: 1024px) {
-    .logo{
-        font-size:32px;
-    }
-    .links {
-        font-size:18px;
-        gap: 15px;
+@media screen and (max-width: 768px) {
+    .logo {
+        font-size: 24px;
     }
 }
 
-@media screen and (max-width: 1280px) {
-    .logo{
-        font-size:24px;
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    .logo{
-        font-size:32px;
-    }
+@media screen and (max-width: 640px) {
     .links {
-        font-size:18px;
-        gap: 15px;
+        justify-content: flex-end;
+    } 
+    .link {
+        display: none;
     }
-}
+}  
