Complete Front End

--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -2,49 +2,49 @@
     margin-bottom: 50px;
     display: flex;
     align-items: center;
-    gap: 50px
-}
-
-.imageContainer {
+    gap: 50px;
+  }
+  
+  .imageContainer {
     flex: 1;
     height: 350px;
     position: relative;
-}
-
-.image {
+  }
+  
+  .image {
     object-fit: cover;
-}
-
-.textContainer {
+  }
+  
+  .textContainer {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 30px
-}
-
-.date {
+    gap: 30px;
+  }
+  
+  .date {
     color: gray;
-}
-
-.category {
+  }
+  
+  .category {
     color: crimson;
     font-weight: 500;
-}
-
-.desc {
+  }
+  
+  .desc {
     font-size: 18px;
     font-weight: 300;
-    color: var(--softTextColor)
-}
-
-.link {
+    color: var(--softTextColor);
+  }
+  
+  .link {
     border-bottom: 1px solid crimson;
     width: max-content;
     padding: 2px 0px;
-}
-
-@media screen and (max-width: 1280px) {
+  }
+  
+  @media screen and (max-width: 1280px) {
     .imageContainer {
-        display: none;
+      display: none;
     }
-}
+  }
