--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -5,73 +5,71 @@
     align-items: center;
     justify-content: space-between;
     color: var(--softTextColor);
-}
-
-.info {
+  }
+  
+  .info {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 14px;
-}
-
-.logo {
+  }
+  
+  .logo {
     display: flex;
     align-items: center;
     gap: 10px;
-}
-
-.logoText {
+  }
+  
+  .logoText {
     font-size: 24px;
-}
-
-.desc {
+  }
+  
+  .desc {
     font-weight: 300;
-}
-
-.icons {
+  }
+  
+  .icons {
     margin-top: 10px;
     display: flex;
     gap: 10px;
-}
-
-.links {
+  }
+  
+  .links {
     flex: 1;
     display: flex;
     justify-content: flex-end;
     gap: 100px;
-}
-
-.list {
+  }
+  
+  .list {
     display: flex;
     flex-direction: column;
     gap: 10px;
     font-weight: 300;
-}
-
-.listTitle {
+  }
+  
+  .listTitle {
     font-weight: bold;
-}
-
-@media screen and (max-width: 1024px) {
+  }
+  
+  @media screen and (max-width: 1024px) {
     .links {
-        gap:50px
+      gap: 50px;
     }
-}
-
-@media screen and (max-width: 768px) {
+  }
+  @media screen and (max-width: 768px) {
     .container {
-        flex-direction: column;
-        gap: 50px
+      flex-direction: column;
+      gap: 50px;
     }
-
+  
     .links {
-        width: 100%;
-        justify-content: space-between;
+      width: 100%;
+      justify-content: space-between;
     }
-}
-
-@media screen and (max-width: 640px) {
+  }
+  @media screen and (max-width: 640px) {
     .links {
-        font-size: 14px;
+      font-size: 14px;
     }
-}
+  }
