--- a/src/components/authLinks/authLinks.module.css
+++ b/src/components/authLinks/authLinks.module.css
@@ -1,28 +1,28 @@
 .link {
     cursor: pointer;
-}
-
-.burger {
+  }
+  
+  .burger {
     width: 20px;
     height: 16px;
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
     display: none;
-}
-
-.line {
+  }
+  
+  .line {
     width: 100%;
-    height: 2%;
+    height: 2px;
     background-color: var(--textColor);
-}
-
-.responsiveMenu {
+  }
+  
+  .responsiveMenu{
     position: absolute;
     top: 100px;
     left: 0;
     background-color: var(--bg);
-    height: calc(100% - 100px);
+    height: calc(100vh - 100px);
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -31,15 +31,14 @@
     gap: 50px;
     font-size: 36px;
     z-index: 999;
-}
-
-@media screen and (max-width: 640px) {
+  }
+  
+  @media screen and (max-width: 640px) {
     .burger {
-        display: flex;
+      display: flex;
     }
-    
-    .link {
-        display: none;
+  
+    .link{
+      display: none;
     }
-    
-}
+  }
