--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,62 +1,58 @@
 .container {
     display: flex;
     align-items: center;
-    justify-items: space-between;
+    justify-content: space-between;
     height: 100px;
-}
-
-.social {
+  }
+  
+  .social {
     display: flex;
     gap: 10px;
     flex: 1;
-}
-
-.logo {
+  }
+  
+  .logo {
     flex: 1;
     text-align: center;
     font-size: 36px;
     font-weight: bold;
-}
-
-.links {
+  }
+  
+  .links {
     display: flex;
+    align-items: center;
     gap: 20px;
     flex: 1;
     font-size: 20px;
-    align-items: center;
-}
-
-@media screen and (max-width: 1280px) {
+  }
+  
+  @media screen and (max-width: 1280px) {
     .logo {
-        font-size: 32px
-    } 
-    .links {
-        font-size: 18px;
-        gap: 15px
+      font-size: 32px;
     }
-}
-
-@media screen and (max-width: 1024px) {
+    .links {
+      font-size: 18px;
+      gap: 15px;
+    }
+  }
+  @media screen and (max-width: 1024px) {
     .social {
-        display: none;
+      display: none;
     }
-
     .logo {
-        text-align: left;
+      text-align: left;
     }
-}
-
-@media screen and (max-width: 768px) {
+  }
+  @media screen and (max-width: 768px) {
     .logo {
-        font-size: 24px;
+      font-size: 24px;
     }
-}
-
-@media screen and (max-width: 640px) {
-    .links {
-        justify-content: flex-end;
-    } 
+  }
+  @media screen and (max-width: 640px) {
+    .links{
+      justify-content: flex-end;
+    }
     .link {
-        display: none;
+      display: none;
     }
-}  
+  }
